# asystent

./: .gitattributes  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
.qtcreator/: CMakeLists.txt.user.957648d
asystent/: .gitignore  CMakeLists.txt  Doxyfile  README.md  README.txt  cryptoexchange.cpp  cryptoexchange.h  generate_chart.py  kod poprawny.txt  llama_model.txt  llmclient.cpp  llmclient.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  tabanalysis.cpp  tabanalysis.h  tabassistant.cpp  tabassistant.h  tabcharts.cpp  tabcharts.h  tabnews.cpp  tabnews.h  tabtaxes.cpp  tabtaxes.h  taxcalculator.cpp  taxcalculator.h  test_main.cpp  utils.cpp  utils.h
docs/: _c_make_c_x_x_compiler_id_8cpp.html  build_2_desktop___qt__6__10__2___min_g_w__64__bit-_debugowa_2generate__chart_8py.js  class_crypto_exchange-members.html  class_crypto_exchange__coll__graph.dot  class_crypto_exchange_a28156403fac0aecf9374b5d6c805e0a2_icgraph.dot  class_crypto_exchange_aa616c86513c26b5173b311556b314140_icgraph.dot  class_l_l_m_client-members.html  class_l_l_m_client.html  class_l_l_m_client.js  class_main_window-members.html  class_main_window.js  class_main_window__inherit__graph.dot  class_main_window_a996c5a2b6f77944776856f08ec30858d_icgraph.dot  class_tab_analysis.js  class_tab_analysis__inherit__graph.dot  class_tab_assistant.js  class_tab_assistant_afcc6ffbd9fd65e87e7160eaa86ebdf55_icgraph.dot  class_tab_charts.html  class_tab_charts_a18fd813689d4434786bb3f6d38587157_icgraph.dot  class_tab_charts_a44400d44577d8463b5e67c5bf124a7d9_cgraph.dot  class_tab_charts_a44400d44577d8463b5e67c5bf124a7d9_icgraph.dot  class_tab_charts_ab91e7b7bd525868306589b18be5b0f16_cgraph.dot  class_tab_charts_ab91e7b7bd525868306589b18be5b0f16_icgraph.dot  class_tab_news-members.html  class_tab_news.html  class_tab_news__inherit__graph.dot  class_tab_news_aefbdebaf3bb40aa72c78d373e5b72b74_cgraph.dot  class_tab_news_aefbdebaf3bb40aa72c78d373e5b72b74_icgraph.dot  class_tab_taxes-members.html  class_tab_taxes.html  class_tab_taxes_aac996af5a08d4a4d1f788217cde2c60c_icgraph.dot  class_tax_calculator-members.html  class_tax_calculator.html  class_tax_calculator__coll__graph.dot  class_tax_calculator_a0529ec9eb49ad56905fa4245d82a4604_icgraph.dot  class_ui_1_1_main_window__inherit__graph.dot  class_ui___main_window.js  class_ui___main_window__coll__graph.dot  class_ui___main_window__inherit__graph.dot  cryptoexchange_8cpp.html  (+102 more)
docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  build_2_desktop___qt__6__10__2___min_g_w__64__bit-_debugowa_2generate__chart_8py.html  class_crypto_exchange.html  class_crypto_exchange.js  class_crypto_exchange_a0a348d27a25833d966aa78cde7294a2c_icgraph.dot  class_crypto_exchange_a9e0bcf315c935544edb5b89a1a70b184_cgraph.dot  class_l_l_m_client__coll__graph.dot  class_main_window.html  (+188 more)
tests/: tests.pro  tst_main.cpp
(+71 files in other folders)
